# fc

./: README.md
api/: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
api/src/payments/: app.py  consumer.py
api/src/payments/accounts/: api.py  exceptions.py  model.py  service.py
api/src/payments/transactions/: api.py  exceptions.py  model.py  service.py
api/src/payments/util/: ds.py  serializers.py
deployments/: README.md
deployments/infra/config-connector/api/: iam.yaml
deployments/infra/config-connector/consumer/: iam.yaml
deployments/infra/terraform-gke-sample/: backend.tf  data.tf  main.tf  outputs.tf  variables.tf  versions.tf
deployments/k8s/api/base/: kustomization.yaml
deployments/k8s/api/base/config/: conf.json
deployments/k8s/api/base/resources/: hpa.yaml  kustomization.yaml  rbac.yaml  svc.yaml  workload.yaml
deployments/k8s/api/dv/: kustomization.yaml  namespace.yaml
deployments/k8s/api/prod/: kustomization.yaml  namespace.yaml
deployments/k8s/consumer/: values.yaml
deployments/k8s/consumer/deploy-sample/: Chart.yaml  values.yaml
deployments/k8s/consumer/deploy-sample/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  serviceaccount.yaml
docs/: 00-Sys-Arch.md
